2010-07-06  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R Added rubber-band selection and the method
	addHandlerChanged to set a callback for when a selection is
	made. See the ggraphics man page for an example

2010-07-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R (.setDevNo): fix to issue with plot.new before
	drawing. Took trick from playwith
	(.setDevNo): Put in code to raise graphic device when mouse clicks
	or mouses over. Not sure latter is right. Perhaps focus event is
	more natural?

2010-06-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R: bug fix for gtree when icons not set

2010-06-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: put in check for delete method

2010-05-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (.setCompletion): visible(obj)<-FALSE for
	password entry

2010-05-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glabel.R (as.gWidgetsRGtk2.GtkLabel): fix to svalue<-() method
	when text is character vector with length > 1.

2010-05-11  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gfile.R: add multi=TRUE option to constructor for multiple
	selection of files

2010-05-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glabel.R: fix to this when editable=TRUE (was throwing error)

2010-04-20  verzani  <verzani@verzani-desktop>

	* R/gdialogs.R: issue with gbasicdialog with parent object when using as container

2010-04-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: new option use.table implemented

2010-04-11  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R: fixed obj[] error if no selection (Thanks Tom)

2010-03-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R (addTreeViewColumnNoEdit): fix edit.handler to work
	with visible rows
