@@ -370,6 +370,10 @@ setMethod(".addhandlerkeystroke",
                                h <- list(obj=d$obj,action=d$action)
                                key <- event$GetString()
                                h$key <- key
+                               ## for modifiers
+                               state <- event$getState()
+                               h$modifier <- names(GdkModifierType)[GdkModifierType == state]
+                               
                                if(!is.null(d$handler) &&
                                   is.function(d$handler))
                                  d$handler(h,...)
